<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadioButtonActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/tvTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNumero1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editNumero1"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/tvResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btOperar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="171dp"
        android:layout_height="211dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumero2">

        <RadioButton
            android:id="@+id/rdSumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rdSumar"
            android:textColorHint="#EC0A0A" />

        <RadioButton
            android:id="@+id/rdRestar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rdRestar"
            android:textColorHint="#EC0A0A" />

        <RadioButton
            android:id="@+id/rdMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rdMulti"
            android:textColorHint="#EC0A0A" />

        <RadioButton
            android:id="@+id/rdDividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rdDividir"
            android:textColorHint="#EC0A0A" />
    </RadioGroup>

    <EditText
        android:id="@+id/editNumero2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editNumero2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumero1" />

    <Button
        android:id="@+id/btOperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="Operar"
        android:text="Operar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btVolver"
        android:onClick="Volver"
        android:textColorHint="#2BB551"
        app:backgroundTint="#F3C5C5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado"
        app:layout_constraintVertical_bias="0.522" />

</androidx.constraintlayout.widget.ConstraintLayout>